--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+#H2 DATABASE
 #spring.datasource.url=jdbc:h2:mem:epic
 spring.datasource.url=jdbc:h2:/usr/ap/data
 spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+
+#ORM
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
